Version 2.02.59 - 
===================================
  Initial version of the cmirror init script (Red Hat).
  Initial version of the cmirrord man page.
  Make cluster log communication structures architecture independant.
  Fix cluster log issues with in-memory bitmaps.
  Improve target type compatibility checking in _percent_run().
  Add 'target_status_compatible' method to 'struct segtype_handler'.
  Fix difference between CTR table built and expected for cluster log.

Version 2.02.58 - 14th January 2010
===================================
  Cleanup some minor gcc warnings.
  Add --merge to lvconvert to merge a snapshot into its origin.
  Fix clvmd automatic target module loading crash (no reset_locking fn).
  Fix allocation code not to stop at the first area of a PV that fits.

Version 2.02.57 - 12th January 2010
===================================
  Ensure exactly one process returns from poll_daemon(), never two.
  Reset _vgs_locked in lvmcache_init() in child after forking.
  Define {DM, LVM}_UDEV_DISABLE_CHECKING=1 environment variables during tests.
  Enable udev_sync and udev_rules in lvm.conf by default while running tests.
  If LVM_UDEV_DISABLE_CHECKING in set in environment, disable udev warnings.
  Add --splitmirrors to lvconvert to split off part of a mirror.
  Change background polldaemon's process name to "(lvm2)".
  Allow vgremove to remove a VG with PVs missing after a prompt.
  Return success in lvconvert --repair --use-policies on failed allocation.
  Keep log type consistent when changing mirror image count.
  Always set environment variables for an LVM2 device in 11-dm-lvm.rules.
  Add activation/udev_rules config option in lvm.conf.
  Add consts to text metadata flag structs.
  Add macros outfc, outsize, outhint and function out_text_with_comment.
  Reimplement report FIELD macro using offsetof instead of static structs.
  Fix fsadm man page typo (fsdam).
  Rename mirror_device_fault_policy to mirror_image_fault policy.